k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: portfolio-backend

  template:
    metadata:
      labels:
        app: portfolio-backend

    spec:
      containers:
        - name: backend

          image: a05shwin11/portfolio-backend:v2
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3001
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
