k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend
spec:
  type: NodePort

  selector:
    app: portfolio-backend

  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30001
